test/frontend/fail/overloaded_identifier.osl
void foo() {}
float foo() { return 1.; }
float bar() { return 2.; }

shader baz() {
    (true ? foo : bar)();
}
